--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <title>{{ page.title }}</title>
+  <style type="text/css">
+		body{background:rgb(2, 148, 177);text-align:center;}
+	</style>
 </head>
+
 <body>
   {{ content }}
 </body>
+
 </html>
