--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,12 +5,28 @@
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <title>{{ page.title }}</title>
   <style type="text/css">
-		body{background:rgb(16, 194, 225);text-align:center;}
-	</style>
+    body {
+      background-color: #dfdfdf;
+      width: 100%;
+      height: 100%;
+      position: relative;
+    }
+
+    div {
+      background-color: #fff;
+      box-shadow: 3px 3px 7px rgba(0, 0, 0, .3);
+      width: 70%;
+      align-content: center;
+      position: relative;
+      margin: 0 auto;
+    }
+  </style>
 </head>
 
 <body>
-  {{ content }}
+  <div>
+    {{ content }}
+  </div>
 </body>
 
 </html>
