--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,7 @@
       align-content: center;
       position: relative;
       margin: 0 auto;
+      text-align: center;
     }
   </style>
 </head>
