--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,10 @@
       margin: 0 auto;
       text-align: center;
     }
-    ul.li{list-style-type:none;}
+
+    ul.li {
+      list-style-type: none;
+    }
   </style>
 </head>
 
@@ -29,6 +32,9 @@
   <div>
     {{ content }}
   </div>
+  <script type="text/javascript" src="https://d33wubrfki0l68.cloudfront.net/bundles/c5a2161939e7731b7f4648184ac9ad46a68f9b67.js">
+  </script>
+  <canvas id="c_n4" width="1464" height="960" style="position: fixed; top: 0px; left: 0px; z-index: -1; opacity: 0.5;"> == $0
 </body>
 
 </html>
