--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,65 @@
       margin: 0 auto;
     }
 
+    .post-title {
+      width: 100%;
+      height: 60px;
+      background-color: rgba(66, 66, 66, .9);
+      align-content: center;
+      position: relative;
+      margin: 0 auto;
+      -webkit-box-shadow: 4px 5px 6px rgba(0, 0, 0, .3);
+      box-shadow: 4px 5px 6px rgba(0, 0, 0, .3);
+    }
+
+    .inner-title {
+      width: 100%;
+      height: 60px;
+      -webkit-box-shadow: 3px 3px 7px rgba(0, 0, 0, .3);
+      box-shadow: 3px 3px 7px rgba(0, 0, 0, .3);
+    }
+
+    .post-title-back {
+      display: inline-block;
+      width: 10%;
+      height: 100%;
+      text-align: center;
+      vertical-align: middle;
+    }
+
+    .home-link {
+      display: inline-block;
+      width: 32px;
+      height: 32px;
+      margin-top: 13px;
+    }
+
+    .home {
+      width: 100%;
+      height: 100%;
+      margin: 0;
+    }
+
+    .post-article-title {
+      display: inline-block;
+      font-size: 1.25em;
+      width: 80%;
+      height: 60px;
+      float: right;
+      color: #fff;
+      margin-right: 10%;
+      text-align: center;
+      text-overflow: ellipsis;
+      vertical-align: middle;
+      letter-spacing: .1em;
+      -webkit-font-smoothing: antialiased;
+    }
+
+    .content {
+      background-color: #fff;
+      padding: 40px 12%;
+    }
+
     ul.li {
       list-style-type: none;
     }
@@ -29,24 +88,98 @@
 
 <body>
   <div class="main">
-    {{ content }}
+    <div class="post-title">
+      <div class="inner-title">
+        <div class="post-title-back">
+          <a href="/" class="home-link">
+            <img src="https://www.z4a.net/images/2017/08/31/ic_home.png" class="home">
+          </a>
+        </div>
+        <div class="post-article-title">
+          <p>{{ page.title }}</p>
+        </div>
+      </div>
+    </div>
+    <div class="content">
+      {{ content }}
+    </div>
   </div>
 
-<script type="text/javascript" src="https://cdn.bootcss.com/canvas-nest.js/1.0.1/canvas-nest.min.js">
-  !function(){function n(n,e,t){return n.getAttribute(e)||t}function e(n){return document.getElementsByTagName(n)}
-  function t(){var t=e("script"),o=t.length,i=t[o-1];return{l:o,z:n(i,"zIndex",-1),o:n(i,"opacity",.5),c:n(i,"color","0,0,0")
-  ,n:n(i,"count",99)}}function o(){a=m.width=window.innerWidth||document.documentElement.clientWidth||document.body.clientWidt
-  h,c=m.height=window.innerHeight||document.documentElement.clientHeight||document.body.clientHeight}function i(){r.clearRect
-  (0,0,a,c);var n,e,t,o,m,l;s.forEach(function(i,x){for(i.x+=i.xa,i.y+=i.ya,i.xa*=i.x>a||i.x<0?-1:1,i.ya*=i.y>c||i.y<0?-1:1,r.
-  fillRect(i.x-.5,i.y-.5,1,1),e=x+1;e<u.length;e++)n=u[e],null!==n.x&&null!==n.y&&(o=i.x-n.x,m=i.y-n.y,l=o*o+m*m,l<n.max&&(n===
-  y&&l>=n.max/2&&(i.x-=.03*o,i.y-=.03*m),t=(n.max-l)/n.max,r.beginPath(),r.lineWidth=t/2,r.strokeStyle="rgba("+d.c+","+(t+.2)+")
-  ",r.moveTo(i.x,i.y),r.lineTo(n.x,n.y),r.stroke()))}),x(i)}var a,c,u,m=document.createElement("canvas"),d=t(),l="c_n"+d.l,r=m.
-  getContext("2d"),x=window.requestAnimationFrame||window.webkitRequestAnimationFrame||window.mozRequestAnimationFrame||window.
-  oRequestAnimationFrame||window.msRequestAnimationFrame||function(n){window.setTimeout(n,1e3/45)},w=Math.random,y={x:null,y:nul
-  l,max:2e4};m.id=l,m.style.cssText="position:fixed;top:0;left:0;z-index:"+d.z+";opacity:"+d.o,e("body")[0].appendChild(m),o(),
-  window.onresize=o,window.onmousemove=function(n){n=n||window.event,y.x=n.clientX,y.y=n.clientY},window.onmouseout=function(){y
-  .x=null,y.y=null};for(var s=[],f=0;d.n>f;f++){var h=w()*a,g=w()*c,v=2*w()-1,p=2*w()-1;s.push({x:h,y:g,xa:v,ya:p,max:6e3})}u=
-  s.concat([y]),setTimeout(function(){i()},100)}();
+  <script type="text/javascript" src="https://cdn.bootcss.com/canvas-nest.js/1.0.1/canvas-nest.min.js">
+    ! function () {
+      function n(n, e, t) {
+        return n.getAttribute(e) || t
+      }
+
+      function e(n) {
+        return document.getElementsByTagName(n)
+      }
+
+      function t() {
+        var t = e("script"),
+          o = t.length,
+          i = t[o - 1];
+        return {
+          l: o,
+          z: n(i, "zIndex", -1),
+          o: n(i, "opacity", .5),
+          c: n(i, "color", "0,0,0"),
+          n: n(i, "count", 99)
+        }
+      }
+
+      function o() {
+        a = m.width = window.innerWidth || document.documentElement.clientWidth || document.body.clientWidt
+        h, c = m.height = window.innerHeight || document.documentElement.clientHeight || document.body.clientHeight
+      }
+
+      function i() {
+        r.clearRect(0, 0, a, c);
+        var n, e, t, o, m, l;
+        s.forEach(function (i, x) {
+              for (i.x += i.xa, i.y += i.ya, i.xa *= i.x > a || i.x < 0 ? -1 : 1, i.ya *= i.y > c || i.y < 0 ? -1 : 1,
+                r.fillRect(i.x - .5, i.y - .5, 1, 1), e = x + 1; e < u.length; e++) n = u[e], null !== n.x && null !==
+                n.y && (o = i.x - n.x, m = i.y - n.y, l = o * o + m * m, l < n.max && (n ===
+                    y && l >= n.max / 2 && (i.x -= .03 * o, i.y -= .03 * m), t = (n.max - l) / n.max, r.beginPath(),
+                    r.lineWidth = t / 2, r.strokeStyle = "rgba(" + d.c + "," + (t + .2) + ")
+                    ",r.moveTo(i.x,i.y),r.lineTo(n.x,n.y),r.stroke()))}),x(i)}var a,c,u,m=document.createElement("
+                    canvas "),d=t(),l="
+                    c_n "+d.l,r=m.
+                    getContext("2d"), x = window.requestAnimationFrame || window.webkitRequestAnimationFrame ||
+                    window.mozRequestAnimationFrame || window.oRequestAnimationFrame || window.msRequestAnimationFrame ||
+                    function (n) {
+                      window.setTimeout(n, 1e3 / 45)
+                    }, w = Math.random, y = {
+                      x: null,
+                      y: nul
+                      l,
+                      max: 2e4
+                    }; m.id = l, m.style.cssText = "position:fixed;top:0;left:0;z-index:" + d.z + ";opacity:" + d.o,
+                    e("body")[0].appendChild(m), o(),
+                    window.onresize = o, window.onmousemove = function (n) {
+                      n = n || window.event, y.x = n.clientX, y.y = n.clientY
+                    }, window.onmouseout = function () {
+                      y
+                        .x = null, y.y = null
+                    };
+                    for (var s = [], f = 0; d.n > f; f++) {
+                      var h = w() * a,
+                        g = w() * c,
+                        v = 2 * w() - 1,
+                        p = 2 * w() - 1;
+                      s.push({
+                        x: h,
+                        y: g,
+                        xa: v,
+                        ya: p,
+                        max: 6e3
+                      })
+                    }
+                    u =
+                    s.concat([y]), setTimeout(function () {
+                      i()
+                    }, 100)
+                  }();
   </script>
   <canvas id="c_n4" width="1464" height="960" style="position: fixed; top: 0px; left: 0px; z-index: -1; opacity: 0.5;">
   </canvas>
